arc-script/tests/unit/src/snapshots/rust@sort_fields.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/sort_fields.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn foo(a_0: Struct1xi321yi32End) -> i32 {
        let x_0: i32 = access!(val!(a_0), x);
        let x_1: i32 = access!(val!(a_0), y);
        let x_2: i32 = val!(x_0) + val!(x_1);
        val!(x_2)
    }
    pub fn bar(a_1: Struct1xi321yi32End) -> i32 {
        let x_3: i32 = access!(val!(a_1), x);
        let x_4: i32 = access!(val!(a_1), y);
        let x_5: i32 = val!(x_3) + val!(x_4);
        val!(x_5)
    }
    #[codegen::rewrite]
    pub struct Struct1xi321yi32End {
        x: i32,
        y: i32,
    }
}
pub use arc_script_output::*;


