arc-script/tests/unit/src/snapshots/rust@task_id.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/task_id.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    #[codegen::rewrite(on_event = "Identity_on_event", on_start = "Identity_on_start")]
    mod Identity_mod {
        struct Identity {}
        #[codegen::rewrite]
        pub enum Identity_IInterface {
            Identity_IInterface_A(Struct3keyi325valuei32End),
        }
        #[codegen::rewrite]
        pub enum Identity_OInterface {
            Identity_OInterface_B(Struct3keyi325valuei32End),
        }
    }
    impl Identity_mod::Identity {
        pub fn Identity_on_event(&mut self, x_0: Identity_IInterface) -> Unit {
            let x_1: bool = is!(Identity_IInterface_A, val!(x_0));
            let x_6: Unit = if val!(x_1) {
                let x_2: Struct3keyi325valuei32End = unwrap!(Identity_IInterface_A, val!(x_0));
                let x_3: Identity_OInterface = enwrap!(Identity_OInterface_B, val!(x_2));
                let x_4: Unit = self.emit(val!(x_3));
                val!(x_4)
            } else {
                let x_5: Unit = unreachable!();
                val!(x_5)
            };
            val!(x_6)
        }
        pub fn Identity_on_start(&mut self) -> Unit {
            let x_7: Unit = ();
            val!(x_7)
        }
    }
    pub fn main(
        input_0: Stream<<Struct3keyi325valuei32End as Convert>::T>,
    ) -> Stream<<Struct3keyi325valuei32End as Convert>::T> {
        let x_8: Box<
            dyn ValueFn() -> Box<
                dyn ValueFn(
                    Stream<<Struct3keyi325valuei32End as Convert>::T>,
                ) -> Stream<<Struct3keyi325valuei32End as Convert>::T>,
            >,
        > = Box::new(Identity)
            as Box<
                dyn ValueFn() -> Box<
                    dyn ValueFn(
                        Stream<<Struct3keyi325valuei32End as Convert>::T>,
                    )
                        -> Stream<<Struct3keyi325valuei32End as Convert>::T>,
                >,
            >;
        let x_9: Box<
            dyn ValueFn(
                Stream<<Struct3keyi325valuei32End as Convert>::T>,
            ) -> Stream<<Struct3keyi325valuei32End as Convert>::T>,
        > = val!(x_8)();
        let x_A: Stream<<Struct3keyi325valuei32End as Convert>::T> = val!(x_9)(val!(input_0));
        val!(x_A)
    }
    #[codegen::rewrite]
    pub struct Struct3keyi325valuei32End {
        key: i32,
        value: i32,
    }
}
pub use arc_script_output::*;


