arc-script/tests/unit/src/snapshots/rust@task_id_untagged.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/task_id_untagged.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    #[codegen::rewrite(on_event = "Identity_on_event", on_start = "Identity_on_start")]
    mod Identity_mod {
        struct Identity {}
        #[codegen::rewrite]
        pub enum Identity_IInterface {
            Identity_IInterface___(Struct3keyi325valuei32End),
        }
        #[codegen::rewrite]
        pub enum Identity_OInterface {
            Identity_OInterface___(Struct3keyi325valuei32End),
        }
    }
    impl Identity_mod::Identity {
        pub fn Identity_on_event(&mut self, x_0: Identity_IInterface) -> Unit {
            let event_0: Struct3keyi325valuei32End = unwrap!(Identity_IInterface___, val!(x_0));
            let x_1: Identity_OInterface = enwrap!(Identity_OInterface___, val!(event_0));
            let x_2: Unit = self.emit(val!(x_1));
            val!(x_2)
        }
        pub fn Identity_on_start(&mut self) -> Unit {
            let x_4: Unit = ();
            val!(x_4)
        }
    }
    #[codegen::rewrite]
    pub struct Struct3keyi325valuei32End {
        key: i32,
        value: i32,
    }
}
pub use arc_script_output::*;


