arc-script/tests/unit/src/snapshots/rust@task_keyby.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_mlir_fail_todo/task_keyby.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    #[codegen::rewrite(on_event = "KeyBy_on_event", on_start = "KeyBy_on_start")]
    mod KeyBy_mod {
        struct KeyBy {
            keyfun_0: Box<dyn ValueFn(i32) -> i32>,
        }
        #[codegen::rewrite]
        pub enum KeyBy_IInterface {
            KeyBy_IInterface___(Struct3keyi325valuei32End),
        }
        #[codegen::rewrite]
        pub enum KeyBy_OInterface {
            KeyBy_OInterface___(Struct3keyi325valuei32End),
        }
    }
    impl KeyBy_mod::KeyBy {
        pub fn KeyBy_on_event(&mut self, x_3: KeyBy_IInterface) -> Unit {
            let x_0: Struct3keyi325valuei32End = unwrap!(KeyBy_IInterface___, val!(x_3));
            let x_1: i32 = access!(val!(x_0), value);
            let x_2: i32 = access!(val!(x_0), key);
            let x_4: i32 = ((self.keyfun_0).clone())(val!(x_1));
            let x_5: Struct3keyi325valuei32End = new!(Struct3keyi325valuei32End {
                value: val!(x_1),
                key: val!(x_4)
            });
            let x_6: KeyBy_OInterface = enwrap!(KeyBy_OInterface___, val!(x_5));
            let x_7: Unit = self.emit(val!(x_6));
            val!(x_7)
        }
        pub fn KeyBy_on_start(&mut self) -> Unit {
            let x_9: Unit = ();
            val!(x_9)
        }
    }
    #[codegen::rewrite]
    pub struct Struct3keyi325valuei32End {
        key: i32,
        value: i32,
    }
}
pub use arc_script_output::*;


