arc-script/tests/unit/src/snapshots/rust@unit_fun.arc.snap
---
source: tests/unit/src/insta.rs
expression: s
input_file: tests/unit/src/tests/expect_pass/unit_fun.arc

---
#[allow(non_snake_case)]
#[allow(unused_must_use)]
#[allow(dead_code)]
#[allow(unused_variables)]
#[allow(unused_imports)]
#[allow(unused_braces)]
#[allow(irrefutable_let_patterns)]
#[allow(clippy::redundant_field_names)]
#[allow(clippy::unused_unit)]
#[allow(clippy::double_parens)]
pub mod arc_script_output {
    use super::*;
    use arc_script::codegen;
    use arc_script::codegen::*;
    pub fn foo(x_0: Unit) -> Unit {
        val!(x_0)
    }
    pub fn bar() -> Unit {
        let x_1: Box<dyn ValueFn(Unit) -> Unit> = Box::new(foo) as Box<dyn ValueFn(Unit) -> Unit>;
        let x_2: Unit = ();
        let x_3: Unit = val!(x_1)(val!(x_2));
        val!(x_3)
    }
}
pub use arc_script_output::*;


